--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,4 +23,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 5000
 
 # Run the application
-CMD ["flask", "run"]
+CMD ["python", "app.py"]
